--- a/server/.env
+++ b/server/.env
@@ -1,4 +1,4 @@
-mongodb+srv://ddhieudhkm16a1cl:ddhieudhkm16a1cl123@cluster0.gqr2q6h.mongodb.net
+MONGODN_URI=mongodb+srv://ddhieudhkm16a1cl:ddhieudhkm16a1cl123@cluster0.gqr2q6h.mongodb.net
 
 CLERK_PUBLISHABLE_KEY=pk_test_ZXZpZGVudC1za2luay0xNS5jbGVyay5hY2NvdW50cy5kZXYk
 CLERK_SECRET_KEY=sk_test_b7qTednBtqZEAJYZjFoM6ucicUsPSKv7SXoFZo4Cf3
